uh-sky/ingress-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: APPNAME
  namespace: tutorial
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: APPNAME

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: APPNAME
  namespace: tutorial
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - APPNAME.tutorial.ioudaas.no
    secretName: APPNAME-tls
  rules:
  - host: APPNAME.tutorial.ioudaas.no
    http:
      paths:
      - backend:
          serviceName: APPNAME
          servicePort: 80
